--- a/app/src/main/res/layout/activity_mostrar_datos.xml
+++ b/app/src/main/res/layout/activity_mostrar_datos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CD2285B3"
     tools:context=".MostrarDatosActivity">
 
     <TextView
@@ -14,6 +15,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="100dp"
         android:text="TextView"
+        android:textColor="#F4F2F2"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,10 +26,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="200dp"
         android:text="@string/datosIngresados"
+        android:textColor="#FBF9F9"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bienvenida" />
 
@@ -38,6 +44,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="200dp"
         android:text="TextView"
+        android:textColor="#F8F5F5"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datosIngresados" />
@@ -50,6 +58,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="250dp"
         android:text="TextView"
+        android:textColor="#FAF5F5"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +73,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="250dp"
         android:text="TextView"
+        android:textColor="#FBF7F7"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +88,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="250dp"
         android:text="TextView"
+        android:textColor="#F8F6F6"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.981"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,8 +100,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Button"
+        android:text="@string/btnVolver"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/claveIngresada" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
